fix: handle operations labels that are too long

--- a/src/ducks/transactions/Transactions.styl
+++ b/src/ducks/transactions/Transactions.styl
@@ -32,6 +32,9 @@
     .bnk-op-caticon
         cursor pointer
 
+    .bnk-op-label
+        max-width 100%
+
     +medium-screen()
         .bnk-op-desc
             cursor pointer
